--- a/packages/amplication-build-types/tsconfig.json
+++ b/packages/amplication-build-types/tsconfig.json
@@ -13,7 +13,7 @@
     "outDir": "dist",
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src"]
 }
