--- a/packages/amplication-build-types/package.json
+++ b/packages/amplication-build-types/package.json
@@ -2,31 +2,12 @@
   "name": "@amplication/build-types",
   "version": "0.14.3",
   "private": true,
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "tsc",
     "check-format": "prettier --check \"**/*.{js,ts,json,gql,md,yaml}\"",
-    "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\"",
-    "test": "jest"
+    "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\""
   },
   "devDependencies": {
-    "@types/jest": "26.0.19",
-    "@types/json-schema": "7.0.9",
-    "@types/normalize-path": "3.0.0",
-    "fast-glob": "3.2.10",
-    "jest": "27.0.6",
-    "json-schema-to-typescript": "10.1.5",
-    "normalize-path": "3.0.0",
-    "npm-run-all": "4.1.5",
-    "prettier": "2.1.1",
-    "ts-jest": "27.0.3",
-    "ts-node": "9.1.1",
-    "typescript": "4.0.2"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "modulePathIgnorePatterns": [
-      "dist"
-    ]
+    "prettier": "2.1.1"
   }
 }
