--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       env:
         BASE_HEAD: ${{ steps.base-head.outputs.value }}
       run: |
-        echo ::set-output name=foldes::$( \
+        echo ::set-output name=folders::$( \
           
         # Git Diff - Get all changed files from BASE_HEAD 
         git diff $BASE_HEAD --name-only -- '*packages/**' | 
@@ -56,13 +56,13 @@ jobs:
         # Format results as JSON array
         jq -Rs 'split("\n") | map(select(length > 0))')
 
-    - run: echo ${{ steps.changed-folders.outputs.foldes }}
+    - run: echo ${{ steps.changed-folders.outputs.folders }}
 
     - name: get package names
       id: packages
       uses: ./.github/actions/get-package-names
       with:
-        folders: ${{ steps.changed-folders.outputs.folders }}
+        folders: ${{ toJSON(steps.changed-folders.outputs.folders) }}
 
     - run: echo ${{ steps.packages.outputs.package_names }}
 
