CI: update get-package-names prettier and eslint add ncc compiler and update action file to out/action/index.js

--- a/.github/actions/get-package-names/action.yml
+++ b/.github/actions/get-package-names/action.yml
@@ -8,4 +8,4 @@ outputs:
     description: 'list of folders with their package names'
 runs:
   using: 'node16'
-  main: 'scripts/run-action.js'
+  main: 'out/action/index.js'
