--- a/.github/actions/get-package-names/tsconfig.json
+++ b/.github/actions/get-package-names/tsconfig.json
@@ -9,7 +9,6 @@
     "target": "es2017",
     "esModuleInterop": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "lib", "out"]
 }
