--- a/.github/actions/find-folders-by/package.json
+++ b/.github/actions/find-folders-by/package.json
@@ -1,42 +1,18 @@
 {
   "name": "@amplication/find-floders",
-  "description": "Amplication Find Floders Action",
+  "description": "Amplication Find Folders Action",
   "version": "0.13.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/amplication/amplication.git"
-  },
   "homepage": "https://amplication.com",
-  "bin": {
-    "amp": "bin/run"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "files": [
-    "/bin",
-    "/lib"
-  ],
-  "jest": {
-    "preset": "ts-jest",
-    "testPathIgnorePatterns": [
-      "dist/"
-    ]
-  },
-  "keywords": [],
   "license": "Apache-2.0",
   "main": "lib/main.js",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "build": "tsc",
-    "prepare": "npm run build",
-    "test": "jest",
-    "check-format": "prettier --check .",
-    "format": "prettier --write .",
-    "lint": "eslint --cache .",
-    "lint:fix": "eslint --fix ."
+    "build": "tsc && ncc build -o dist/action src/main.ts",
+    "test": "tsc --noEmit && jest --coverage",
+    "lint": "eslint **/*.ts --cache",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts"
   },
-  "types": "lib/index.d.ts",
   "dependencies": {
     "@actions/core": "1.9.0",
     "underscore": "1.13.4"
@@ -46,9 +22,15 @@
     "@types/underscore": "1.11.4",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
+    "@vercel/ncc": "0.34.0",
     "eslint": "8.17.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "26.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "28.1.3",
+    "jest-circus": "28.1.3",
     "jest-mock-extended": "2.0.7",
     "prettier": "2.7.1",
     "ts-jest": "28.0.7",
