add phase and state handling

--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -14,3 +14,6 @@ BUILD_ARTIFACT_S3_BUCKET=amplication-dsg-dev
 BUILD_ARTIFACT_S3_LOCATION=build-artifacts
 
 CODE_BUILD_PROJECT_NAME=code-generator-dev
+
+BUILD_STATE_TOPIC=build.external.build-state.event.0
+BUILD_PHASE_TOPIC=build.external.build-phase.event.0
