--- a/packages/amplication-nest-logger-module/package.json
+++ b/packages/amplication-nest-logger-module/package.json
@@ -13,7 +13,6 @@
   },
   "author": "tupe12334",
   "devDependencies": {
-    "@nestjs/common": "9.0.5",
     "@types/jest": "28.1.6",
     "@types/node": "18.6.1",
     "jest": "28.1.3",
@@ -43,5 +42,8 @@
     "moduleNameMapper": {
       "^src/(.*)": "<rootDir>/src/$1"
     }
+  },
+  "dependencies": {
+    "@nestjs/common": "9.0.7"
   }
 }
