fix(git-pr): tsconfig update

--- a/packages/amplication-git-pull-request-service/tsconfig.json
+++ b/packages/amplication-git-pull-request-service/tsconfig.json
@@ -15,7 +15,8 @@
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "noImplicitUseStrict": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
   "exclude": ["node_modules", "dist", "builds"]
 }
