fix(kafka): update tsconfig

--- a/packages/amplication-kafka/tsconfig.json
+++ b/packages/amplication-kafka/tsconfig.json
@@ -10,7 +10,8 @@
     "outDir": "./lib",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "skipLibCheck": true
   },
   "exclude": ["node_modules", "lib"],
   "include": ["src"]
