--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,7 +215,7 @@ jobs:
             PUSH-${{ runner.os }}-${{matrix.node-version}}-
             PUSH-${{ runner.os }}-
       - name: Install Node.js dependencies
-        run: npm ci --cache ~/.npm --prefer-offline --only=production --silent
+        run: npm ci --cache ~/.npm --prefer-offline --only=production
       - name: Install package dependencies
         id: install
         run: lerna bootstrap
