--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,55 +17,55 @@ on:
       - ".all-contributorsrc"
 
 jobs:
-  # changes:
-  #   runs-on: ubuntu-18.04
-  #   outputs:
-  #     packages: ${{ steps.build_list.outputs.package_build_list }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0
-  #     - name: get changed files (not pr)
-  #       if: github.event_name != 'pull_request'
-  #       id: changed-files-not-pr
-  #       run: |
-  #         changed_files=$(git diff --name-only `git merge-base origin/master HEAD`)
-  #         while IFS= read -r changed_file ; do
-  #           echo "changed_file: $changed_file"
-  #           if [[ "$changed_file" == *"packages/"* || "$changed_file" == *"ee/packages/"* ]]; then
-  #             all_changed_files=$all_changed_files",$changed_file"
-  #           fi
-  #         done <<< "$changed_files"
-  #         all_changed_files="${all_changed_files:1}"
-  #         echo "all_changed_files: $all_changed_files"
-  #         echo "::set-output name=all_changed_files::$all_changed_files"
-  #     - name: get changed files (pr)
-  #       id: changed-files-pr
-  #       if: github.event_name == 'pull_request'
-  #       uses: tj-actions/changed-files@v22.1
-  #       with:
-  #         separator: ","
-  #         files_ignore: |
-  #           .github/**
-  #         files: |
-  #           packages/**
-  #           ee/packages/**
-  #     - name: setup python
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.8 #install the python needed
-  #     - name: create package list
-  #       id: build_list
-  #       env:
-  #         CHANGED_FILES_PR: ${{ steps.changed-files-pr.outputs.all_changed_files }}
-  #         CHANGED_FILES_NOT_PR: ${{ steps.changed-files-not-pr.outputs.all_changed_files }}
-  #       run: |
-  #         echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-  #         pip install checksumdir
-  #         python .github/workflows/scripts/get-service-build-list.py
-  #         package_build_list=$(cat $GITHUB_WORKSPACE/package_build_list.json | jq -r .)
-  #         echo "package_build_list: $package_build_list"
-  #         echo "::set-output name=package_build_list::$package_build_list"
+  changes:
+    runs-on: ubuntu-18.04
+    outputs:
+      packages: ${{ steps.build_list.outputs.package_build_list }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: get changed files (not pr)
+        if: github.event_name != 'pull_request'
+        id: changed-files-not-pr
+        run: |
+          changed_files=$(git diff --name-only `git merge-base origin/master HEAD`)
+          while IFS= read -r changed_file ; do 
+            echo "changed_file: $changed_file"
+            if [[ "$changed_file" == *"packages/"* || "$changed_file" == *"ee/packages/"* ]]; then
+              all_changed_files=$all_changed_files",$changed_file"
+            fi
+          done <<< "$changed_files"
+          all_changed_files="${all_changed_files:1}"
+          echo "all_changed_files: $all_changed_files"
+          echo "::set-output name=all_changed_files::$all_changed_files"
+      - name: get changed files (pr)
+        id: changed-files-pr
+        if: github.event_name == 'pull_request'
+        uses: tj-actions/changed-files@v22.1
+        with:
+          separator: ","
+          files_ignore: |
+            .github/**
+          files: |
+            packages/**
+            ee/packages/**
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
+      - name: create package list
+        id: build_list
+        env:
+          CHANGED_FILES_PR: ${{ steps.changed-files-pr.outputs.all_changed_files }}
+          CHANGED_FILES_NOT_PR: ${{ steps.changed-files-not-pr.outputs.all_changed_files }}
+        run: |
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          pip install checksumdir
+          python .github/workflows/scripts/get-service-build-list.py
+          package_build_list=$(cat $GITHUB_WORKSPACE/package_build_list.json | jq -r .)
+          echo "package_build_list: $package_build_list"
+          echo "::set-output name=package_build_list::$package_build_list"
 
   hashes:
     runs-on: ubuntu-18.04
@@ -189,13 +189,13 @@ jobs:
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ env.BRANCH_NAME }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
   tests:
     runs-on: ubuntu-20.04
-    # needs: [changes]
-    # if: ${{ needs.changes.outputs.packages != '[]' && needs.changes.outputs.packages != '' }}
+    needs: [changes]
+    if: ${{ needs.changes.outputs.packages != '[]' && needs.changes.outputs.packages != '' }}
     timeout-minutes: 45
-    # strategy:
-    #   matrix:
-    #     package: ${{ fromJson(needs.changes.outputs.packages) }}
-    #     node-version: [14.x, 16.x]
+    strategy:
+      matrix:
+        package: ${{ fromJson(needs.changes.outputs.packages) }}
+        node-version: [14.x, 16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -209,28 +209,34 @@ jobs:
             ~/.npm
             node_modules
             */*/node_modules
-          key: PUSH-${{ runner.os }}-${{matrix.node-version}}-lerna5-${{ hashFiles('**/package-lock.json') }}
+          key: PUSH-${{ runner.os }}-${{matrix.node-version}}-${{matrix.package}}-${{ hashFiles(format('{0}/package-lock.json',matrix.package.path)) }}
           restore-keys: |
-            PUSH-${{ runner.os }}-${{matrix.node-version}}-
+            PUSH-${{ runner.os }}-${{matrix.node-version}}-${{matrix.package}}-
             PUSH-${{ runner.os }}-${{matrix.node-version}}-
             PUSH-${{ runner.os }}-
       - name: Install Node.js dependencies
-        run: npm ci --cache ~/.npm --prefer-offline --only=production
+        run: npm ci --cache ~/.npm --prefer-offline --only=production --silent
       - name: Install package dependencies
         id: install
-        run: lerna bootstrap
+        run: lerna bootstrap --scope=${{matrix.package}} --include-dependencies
       - name: Build Prisma client
         id: prisma
-        run: lerna run prisma:generate
+        run: lerna run --scope=${{matrix.package}} prisma:generate
       - name: Build code
         id: build
-        run: lerna run --loglevel=silent build
+        run: lerna run --scope=${{matrix.package}} --loglevel=silent build --include-dependencies
       - name: Format code
         id: format
-        run: lerna run --loglevel=silent check-format
+        run: lerna run --scope=${{matrix.package}} --loglevel=silent check-format
       - name: Lint code
         id: lint
-        run: lerna run --loglevel=silent lint
+        run: lerna run --scope=${{matrix.package}} --loglevel=silent lint
       - name: Run tests
         id: test
-        run: lerna run --loglevel=silent test
+        run: lerna run --scope=${{matrix.package}} --loglevel=silent test
+      - name: Discord notification
+        if: failure()
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
+          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{matrix.package}}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"},{"name":"Install","value":"${{ steps.install.outcome }}","inline":true},{"name":"Build","value":"${{ steps.build.outcome }}","inline":true},{"name":"Test","value":"${{ steps.test.outcome }}","inline":true},{"name":"Format","value":"${{ steps.format.outcome }}","inline":true},{"name":"Lint","value":"${{ steps.lint.outcome }}","inline":true}]}]'
