Use pull_request_target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - "**.md"
       - "renovate.json"
       - ".all-contributorsrc"
-  pull_request:
+  pull_request_target:
     branches: ["master", "release/*"]
     types: [opened, reopened]
     paths-ignore:
