Fix new-pr workflow

--- a/.github/workflows/new-pr.yaml
+++ b/.github/workflows/new-pr.yaml
@@ -11,3 +11,5 @@ jobs:
     runs-on: ubuntu-18.04
     if: github.event_name == 'pull_request' && github.event.action == 'opened' || github.event.action == 'reopened'
     steps:
+      - name: "Ntification"
+        run: echo "placeholder"
