--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ on:
         options:
           - staging
           - prod
+          - next
           - shimi
           - mor
           - amit
