--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -6,6 +6,7 @@ GENERATE_RESOURCE_TOPIC=build.internal.generate-resource.event.0
 BUILD_STATUS_TOPIC=build.internal.build-status.event.0
 
 BUILD_CONTEXT_FS_LOCATION=/home/eugene/build-contexts
+BUILD_ARTIFACT_FS_LOCATION=/home/eugene/build-artifacts
 
 BUILD_CONTEXT_S3_BUCKET=amplication-dsg-dev
 BUILD_CONTEXT_S3_LOCATION=build-contexts
