--- a/packages/amplication-build-manager-service/.env
+++ b/packages/amplication-build-manager-service/.env
@@ -18,3 +18,8 @@ CODE_BUILD_PROJECT_NAME=code-generator-dev
 
 BUILD_STATE_TOPIC=build.external.build-state.event.0
 BUILD_PHASE_TOPIC=build.external.build-phase.event.0
+
+BUILD_IMAGE_NAME=407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator
+BUILD_IMAGE_VERSION=0.0.5
+
+GET_BUILD_BY_RUN_ID_TOPIC=build.internal.get-build-by-run-id.message.0
