CI: update get-services-hash GitHub action hashing logic to work with glob instead of recursion, add hash ignore input for a list of glob pattern paths to ignore when doing the hashing, add folders-to-hash input for a list of services folders to hash. update ci workflow to use the new inputs

--- a/.github/actions/get-services-hash/action.yml
+++ b/.github/actions/get-services-hash/action.yml
@@ -1,5 +1,10 @@
 name: 'Create services hash'
 description: 'Create services hash code hash signatures for change in code detection'
+inputs:
+  folders-to-hash:
+    description: 'list of folders tp hash'
+  hash-ignore:
+    description: 'list of files and folders that dont need to be included in the hash'
 outputs:
   service_hashes:
     description: 'list of services hashes'
