--- a/.github/actions/get-services-hash/package.json
+++ b/.github/actions/get-services-hash/package.json
@@ -34,13 +34,16 @@
   },
   "types": "lib/index.d.ts",
   "dependencies": {
-    "@actions/core": "1.9.0"
+    "@actions/core": "1.9.0",
+    "glob": "8.0.3"
   },
   "devDependencies": {
+    "@types/glob": "7.2.0",
+    "@types/node": "16.11.7",
     "eslint": "8.17.0",
     "prettier": "2.7.1",
-    "ts-node": "10.8.1",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "4.7.3"
+    "typescript": "^4.7.4"
   }
 }
