--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,19 +141,22 @@ jobs:
         run: |
           echo "${{ steps.find-folders.outputs.folders }}"
 
-#      - name: get services hash
-#        id: service-hashes
-#        uses: ./.github/actions/get-services-hash
-#
-#      - name: Get the output time
-#        run: echo "The step output ${{ steps.service-hashes.outputs.service_hashes }}"
-#
-#      - name: Discord notification
-#        if: failure()
-#        uses: Ilshidur/action-discord@0.3.2
-#        env:
-#          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
-#          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
+      - name: get services hash
+        id: service-hashes
+        uses: ./.github/actions/get-services-hash
+        with:
+          folders-to-hash: ${{ steps.find-folders.outputs.folders }}
+          hash-ignore: '["node_modules/**", "lib/**", "dist/**", "**/*.spec.ts","__tests__/**","__mocks__/**","test/**","tests/**"]'
+
+      - name: Get the output time
+        run: echo "The step output ${{ steps.service-hashes.outputs.service_hashes }}"
+
+      - name: Discord notification
+        if: failure()
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
+          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
 
 
 
