CI: get-hashes GitHub action - update readme, update prettier, update eslint, update tsc,update jest, add ncc build and update action.yml

--- a/.github/actions/get-services-hash/action.yml
+++ b/.github/actions/get-services-hash/action.yml
@@ -10,4 +10,4 @@ outputs:
     description: 'list of services hashes'
 runs:
   using: 'node16'
-  main: 'scripts/run-action.js'
+  main: 'dist/index.js'
