--- a/.github/actions/get-services-hash/package.json
+++ b/.github/actions/get-services-hash/package.json
@@ -1,49 +1,40 @@
 {
-  "name": "@amplication/action",
-  "description": "Amplication Action",
+  "name": "@amplication/get-services-hash",
+  "description": "Amplication Get Services Hash Action",
   "version": "0.13.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/amplication/amplication.git"
-  },
-  "homepage": "https://amplication.com",
-  "bin": {
-    "amp": "bin/run"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "files": [
-    "/bin",
-    "/lib"
-  ],
-  "jest": {
-    "preset": "ts-jest",
-    "testPathIgnorePatterns": [
-      "dist/"
-    ]
-  },
-  "keywords": [],
   "license": "Apache-2.0",
   "main": "lib/main.js",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "build": "tsc",
-    "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepare": "npm run build"
+    "build": "tsc && ncc build -o dist/action src/main.ts",
+    "test": "tsc --noEmit && jest --coverage",
+    "lint": "eslint **/*.ts --cache",
+    "format": "prettier --write **/*.ts",
+    "format-check": "prettier --check **/*.ts"
   },
-  "types": "lib/index.d.ts",
   "dependencies": {
     "@actions/core": "1.9.0",
     "glob": "8.0.3"
   },
   "devDependencies": {
+    "@types/jest": "28.1.6",
     "@types/glob": "7.2.0",
-    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
+    "@vercel/ncc": "0.34.0",
     "eslint": "8.17.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "26.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "jest": "28.1.3",
+    "jest-circus": "28.1.3",
+    "jest-mock-extended": "2.0.7",
     "prettier": "2.7.1",
-    "ts-node": "^10.9.1",
+    "ts-jest": "28.0.7",
+    "ts-node": "10.8.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "4.7.3"
   }
 }
