--- a/.github/actions/get-services-hash/action.yml
+++ b/.github/actions/get-services-hash/action.yml
@@ -10,4 +10,4 @@ outputs:
     description: 'list of services hashes'
 runs:
   using: 'node16'
-  main: 'dist/index.js'
+  main: 'dist/action/index.js'
