--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,54 +23,48 @@ jobs:
       packages: ${{ steps.packages.outputs.package_names }}
     steps:
 
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: set base to compare
-      id: base-head
-      run: |
-        if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
-             echo "::set-output name=value::${{ github.base_ref }}"
-        else
-             echo "::set-output name=value::origin/master"
-        fi
-    - run: echo ${{ steps.base-head.outputs.value }}
+      - name: set base to compare
+        id: base-head
+        run: |
+          if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
+               echo "::set-output name=value::${{ github.base_ref }}"
+          else
+               echo "::set-output name=value::origin/master"
+          fi
+      - run: echo ${{ steps.base-head.outputs.value }}
 
-    - name: Build, tag, and push image to Amazon ECR
-      if: ${{ steps.hash-tag-exist.outputs.tag_exist == 'false' }}
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        TAG_LIST: "${{ github.run_id }},${{ github.sha }},${{ env.BRANCH_NAME }}"
-      run: |
-        echo "Will work from: $SERVICE_FOLDER"
-        Docker_image=$ECR_REGISTRY/$REPOSITORY_NAME:$IMAGE_HASH
-        echo "Docker_image: $Docker_image"
-        command="docker build -f $SERVICE_FOLDER/Dockerfile . -t $Docker_image"
-        echo "$command"
-        $command
-        docker push $Docker_image
+      - name: get changed folders
+        id: changed-folders
+        env:
+          BASE_HEAD: ${{ steps.base-head.outputs.value }}
+        run: |
+          echo ::set-output name=folders::$( \
 
-    - name: Retag
-      env:
-        HASH_TAG_EXIST: ${{ steps.hash-tag-exist.outputs.tag_exist }}
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        TAG_LIST_SHORT: "${{ env.BRANCH_NAME }}"
-        TAG_LIST_FULL: "${{ env.BRANCH_NAME }},${{ github.run_id }}"
-        ECR_REPOSITORY: "${{ env.REPOSITORY_NAME }}"
-      run: |
-        if [[ "$HASH_TAG_EXIST" == 'true' ]]
-        then
-          echo "tag already exist"
-          export TAG_LIST=$TAG_LIST_SHORT
-        else
-          echo "tag doesn't exist"
-          export TAG_LIST=$TAG_LIST_FULL
-        fi
-        echo $TAG_LIST
-        export MANIFEST=$(aws ecr batch-get-image --repository-name $REPOSITORY_NAME --image-ids imageTag=$IMAGE_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
-        echo "MANIFEST: $MANIFEST"
-        sh .github/workflows/scripts/ecr_retag.sh
+          # Git Diff - Get all changed files from BASE_HEAD 
+          git diff $BASE_HEAD --name-only -- 'packages/**' 'ee/packages/**' | 
+
+          # Extract folder names from files path
+          grep -Eio "(.+||^)packages.[^\/]+" | 
+
+          # Dedupplicate folders
+          uniq |
+
+          # Format results as JSON array
+          jq -Rs 'split("\n") | map(select(length > 0))')
+
+      - run: echo ${{ steps.changed-folders.outputs.folders }}
+
+      - name: get package names
+        id: packages
+        uses: ./.github/actions/get-package-names
+        with:
+          folders: ${{ steps.changed-folders.outputs.folders }}
+
+      - run: echo ${{ steps.packages.outputs.package_names }}
 
   tests:
     runs-on: ubuntu-20.04
