--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -56,3 +56,5 @@ BUILD_CONTEXT_LOCATION=[path-to-local-folder]
 GENERATE_RESOURCE_TOPIC='build.internal.generate-resource.event.0'
 
 BUILD_STATUS_TOPIC='build.internal.build-status.event.0'
+
+GET_BUILD_BY_RUN_ID_TOPIC=build.internal.get-build-by-run-id.message.0
