--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -35,7 +35,7 @@ amplication-server:
 
       #KAFKA
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      KAFKA_BROKERS: '["b-1.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-2.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -75,7 +75,7 @@ amplication-git-push-webhook-service:
     hostname: webhook.staging.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["b-1.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-2.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -97,7 +97,7 @@ amplication-git-pull-service:
       GIT_DEFAULT_ORIGIN_NAME: origin
       GITHUB_APP_PRIVATE_KEY: ""
 
-      KAFKA_BROKERS: '["b-1.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-2.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -106,7 +106,7 @@ amplication-git-pull-service:
 amplication-git-pull-request-service:
   config:
     env:
-      KAFKA_BROKERS: '["b-1.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-2.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
@@ -118,5 +118,5 @@ amplication-storage-gateway:
     hostname: server.staging.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["b-1.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092","b-2.amplicationuseast1sta.9134yb.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["b-2.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplicationuseast1sta.8g5s9j.c22.kafka.us-east-1.amazonaws.com:9092"]'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
