--- a/package.json
+++ b/package.json
@@ -20,25 +20,53 @@
     "build-storybook": "lerna run build-storybook",
     "generate-test-data-service": "lerna run --scope @amplication/data-service-generator generate-test-data-service",
     "setup:dev": "ts-node ./script/setup.ts",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d",
+    "nx-start": "nx serve",
+    "nx-build": "nx build",
+    "nx-test": "nx test"
   },
   "dependencies": {
     "lerna": "4.0.0",
     "ora": "5.4.0",
     "react-query": "^3.39.1",
     "semver": "7.3.5",
-    "winston": "3.3.4"
+    "winston": "3.3.4",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
-    "@types/jest": "27.0.2",
     "@types/ora": "3.2.0",
     "@types/semver": "7.3.9",
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.0.5",
-    "ts-jest": "27.0.5"
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@nrwl/cli": "14.5.4",
+    "@nrwl/eslint-plugin-nx": "14.5.4",
+    "@nrwl/jest": "14.5.4",
+    "@nrwl/linter": "14.5.4",
+    "@nrwl/nest": "14.5.4",
+    "@nrwl/node": "14.5.4",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/workspace": "14.5.4",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.5.1",
+    "nx": "14.5.4",
+    "prettier": "^2.6.2",
+    "ts-jest": "27.1.4",
+    "ts-node": "~10.8.0",
+    "typescript": "~4.7.2"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
