Fix typescript versions temporarily

--- a/package.json
+++ b/package.json
@@ -23,22 +23,47 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
   },
   "dependencies": {
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "lerna": "4.0.0",
-    "ora": "5.4.0",
+    "ora": "5.4.1",
     "react-query": "^3.39.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
     "semver": "7.3.5",
-    "winston": "3.3.4"
+    "tslib": "^2.3.0",
+    "winston": "^3.3.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.3",
     "@graphql-codegen/typescript": "2.4.1",
-    "@types/jest": "27.0.2",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@nrwl/cli": "14.5.4",
+    "@nrwl/eslint-plugin-nx": "14.5.4",
+    "@nrwl/jest": "14.5.4",
+    "@nrwl/linter": "14.5.4",
+    "@nrwl/nest": "14.5.4",
+    "@nrwl/node": "14.5.4",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/workspace": "14.5.4",
+    "@types/jest": "27.4.1",
+    "@types/node": "16.11.7",
     "@types/ora": "3.2.0",
     "@types/semver": "7.3.9",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "graphql": "15.3.0",
+    "jest": "27.5.1",
     "npm-run-all": "4.1.5",
-    "prettier": "2.0.5",
-    "ts-jest": "27.0.5"
+    "nx": "14.5.4",
+    "prettier": "^2.6.2",
+    "ts-jest": "27.1.4",
+    "ts-node": "9.1.1",
+    "typescript": "4.5.4"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
