Add more default files for Nx

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#####################
+# Lerna-era ignores #
+#####################
+
 node_modules/
 terraform/envs/production/.terraform.lock.hcl
 terraform/envs/dev/.terraform.lock.hcl
@@ -11,3 +15,45 @@ lib/
 values-secret*
 dist/
 packages/.server-id
+
+########################
+# Nx Workspace ignores #
+########################
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# dependencies
+node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
