--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "build-storybook": "lerna run build-storybook",
     "generate-test-data-service": "lerna run --scope @amplication/data-service-generator generate-test-data-service",
     "setup:dev": "ts-node ./script/setup.ts",
-    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up -d",
+    "nx-start": "nx serve",
+    "nx-build": "nx build",
+    "nx-test": "nx test"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
