--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -1,41 +1,48 @@
 {
-	"name": "@amplication/kafka",
-	"version": "0.14.11",
-	"description": "",
-	"main": "./lib/index.js",
-	"keywords": [],
-	"author": "tupe12334",
-	"devDependencies": {
-		"@types/jest": "27.4.1",
-		"@types/node": "17.0.26",
-		"jest": "27.5.1",
-		"rimraf": "3.0.2",
-		"ts-jest": "27.1.4",
-		"typescript": "4.6.3"
-	},
-	"jest": {
-		"moduleFileExtensions": [
-			"js",
-			"json",
-			"ts"
-		],
-		"roots": [
-			"<rootDir>/src"
-		],
-		"transform": {
-			"^.+\\.ts$": "ts-jest"
-		},
-		"testRegex": ".spec.ts$",
-		"testEnvironment": "node",
-		"moduleNameMapper": {
-			"^src/(.*)": "<rootDir>/src/$1"
-		}
-	},
-	"dependencies": {
-		"@nestjs/common": "8.4.4",
-		"@nestjs/core": "8.4.4",
-		"@nestjs/microservices": "8.4.3",
-		"dotenv": "16.0.0",
-		"reflect-metadata": "0.1.13"
-	}
+  "name": "@amplication/kafka",
+  "version": "0.14.11",
+  "description": "",
+  "main": "./lib/index.js",
+  "scripts": {
+    "build": "tsc",
+    "prebuild": "rimraf lib",
+    "prepare": "npm run build",
+    "test": "jest",
+    "postinstall": "npm run build"
+  },
+  "keywords": [],
+  "author": "tupe12334",
+  "devDependencies": {
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.26",
+    "jest": "27.5.1",
+    "rimraf": "3.0.2",
+    "ts-jest": "27.1.4",
+    "typescript": "4.6.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": ".spec.ts$",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)": "<rootDir>/src/$1"
+    }
+  },
+  "dependencies": {
+    "@nestjs/common": "8.4.4",
+    "@nestjs/core": "8.4.4",
+    "@nestjs/microservices": "8.4.3",
+    "dotenv": "16.0.0",
+    "reflect-metadata": "0.1.13"
+  }
 }
