--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
-    "ts-jest": "27.0.5"
+    "ts-jest": "27.0.5",
+    "nx": "14.5.4"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
