--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
     "ts-jest": "27.0.5",
-    "nx": "14.5.4"
+    "nx": "14.5.4",
+    "@nrwl/nx-cloud": "latest"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
