Set useNx to true in lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,5 @@
 {
+  "useNx": true,
   "packages": [
     "packages/*",
     "ee/packages/*",
@@ -8,10 +9,7 @@
   "version": "0.14.11",
   "command": {
     "bootstrap": {
-      "ignore": [
-        "admin-template",
-        "server-template"
-      ]
+      "ignore": ["admin-template", "server-template"]
     }
   }
 }
