--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml up -d"
   },
   "dependencies": {
-    "lerna": "4.0.0",
+    "lerna": "5.4.1",
     "ora": "5.4.0",
     "react-query": "^3.39.1",
     "semver": "7.3.5",
@@ -38,7 +38,8 @@
     "graphql": "15.3.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
-    "ts-jest": "27.0.5"
+    "ts-jest": "27.0.5",
+    "nx": "14.5.4"
   },
   "engines": {
     "node": "^16.3.0 || ^14.0.0",
