added typescript to build types, added copy build types to dockerfile

--- a/packages/amplication-build-types/package.json
+++ b/packages/amplication-build-types/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\""
   },
   "devDependencies": {
+    "typescript": "4.7.3",
     "prettier": "2.1.1"
   }
 }
