--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -36,6 +36,7 @@
     "@google-cloud/secret-manager": "3.10.1",
     "@google-cloud/storage": "5.17.0",
     "@google-cloud/trace-agent": "5.1.3",
+    "@hubspot/api-client": "7.1.2",
     "@nestjs/common": "8.4.3",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.2.3",
