fix(git-service): fix missing jest-mock-extended

--- a/packages/amplication-git-service/tsconfig.json
+++ b/packages/amplication-git-service/tsconfig.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src"]
+  "include": ["src/index.ts"]
 }
