fix(git pull request): fix missing jest-mock-extended

--- a/packages/amplication-git-pull-request-service/tsconfig.json
+++ b/packages/amplication-git-pull-request-service/tsconfig.json
@@ -18,5 +18,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "builds"]
+  "exclude": ["node_modules", "dist", "builds"],
+  "include": ["src/index.ts"]
 }
