--- a/packages/amplication-git-service/tsconfig.json
+++ b/packages/amplication-git-service/tsconfig.json
@@ -21,6 +21,5 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["node_modules", "dist"],
-  "include": ["src/index.ts"]
+  "exclude": ["node_modules", "dist"]
 }
