fix(git-pr-service): fix mock and lint

--- a/packages/amplication-git-pull-request-service/tsconfig.json
+++ b/packages/amplication-git-pull-request-service/tsconfig.json
@@ -18,6 +18,5 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "builds"],
-  "include": ["src/index.ts"]
+  "exclude": ["node_modules", "dist", "builds"]
 }
