--- a/packages/amplication-git-pull-request-service/package.json
+++ b/packages/amplication-git-pull-request-service/package.json
@@ -14,8 +14,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "postinstall": "npm run build"
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@amplication/git-service": "^0.14.12",
