fix(kafka): remove post install script

--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -7,8 +7,7 @@
     "build": "tsc",
     "prebuild": "rimraf lib",
     "prepare": "npm run build",
-    "test": "jest",
-    "postinstall": "npm run build"
+    "test": "jest"
   },
   "keywords": [],
   "author": "tupe12334",
