--- a/packages/amplication-nest-logger-module/package.json
+++ b/packages/amplication-nest-logger-module/package.json
@@ -8,8 +8,7 @@
     "prebuild": "rimraf dist",
     "test": "jest",
     "check-format": "prettier --check \"**/*.{ts,json,gql,md,yaml}\"",
-    "format": "prettier --write \"**/*.{ts,json,gql,md,yaml}\"",
-    "postinstall": "npm run build"
+    "format": "prettier --write \"**/*.{ts,json,gql,md,yaml}\""
   },
   "author": "tupe12334",
   "devDependencies": {
