--- a/packages/amplication-prisma-db/package.json
+++ b/packages/amplication-prisma-db/package.json
@@ -7,7 +7,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "prebuild": "rimraf lib",
-    "build": "tsc & npm run prisma:generate",
+    "build": "npm run prisma:generate && tsc",
     "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "prisma generate",
